[gd_scene load_steps=3 format=3 uid="uid://brpmbb0x2d1xv"]

[ext_resource type="Texture2D" uid="uid://ckvuwy3ufuqqr" path="res://Sprites/circle.svg" id="1_odv6q"]
[ext_resource type="Script" path="res://Scripts/bingo_ball.gd" id="1_oxxlr"]

[node name="BingoBall" type="PathFollow2D"]
rotates = false
cubic_interp = false
loop = false
script = ExtResource("1_oxxlr")

[node name="Outertexture" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -49.0
offset_right = 49.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_odv6q")
expand_mode = 1

[node name="Centertexture" type="TextureRect" parent="Outertexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_odv6q")
expand_mode = 1

[node name="BallNumberLabel" type="Label" parent="Outertexture/Centertexture"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
